style.css
* {
    box-sizing: border-box;
}

body{
    font-family: 'Raleway', sans-serif;
    width:100%;
    margin:auto;
}
#main{
    margin: 0px 150px;
}
h1{
    font-size: 38px;
}
h2{
    font-size: 20px;
}
h3{
    font-size: 30px;
}
h4{
    font-size: 22px;
}
h5{
    font-size: 22px;
    margin: 10px;
}
.blue{
    color: blue;
}
.grey{
    color: grey;
}
#logo{
    width: 200px;
    height: 100px;
    justify-content: center;
    align-items: center;
}
header{
    display: flex;
    justify-content: space-between;
}
header nav{
    display:flex;
    align-items: flex-end;
    height: 100px;
}
header nav .liens{
    display: flex;
    justify-content: space-around;
    width: 35%;
}
.buttons{
    display:flex;
    width: 150px;
    height: 97px;
    border: none;
    font-size: 20px;
    border-radius: 3px;
    text-decoration: none;
    align-items: center;
    justify-content: center;
    font-weight: bold;
}
.buttons:hover{
    border-top: 2px solid blue;
    color: blue;
    transform: scale(1.02);
    transition: 0.2s;
}
#button_03{
    font-weight: bolder;
}
#button_03:hover{
    background-color: rgb(231, 229, 229);
}
.localisation{
    display: flex;
    flex-direction: row;
    justify-content: center;
    border: none;
    border-radius: 15px;
    width: 30%;
    height: 50px;
    margin-top: 30px;
}
.localisation input{
    width: 50%;
    border: none;
    border-top: solid 2px #F2F2F2;
    border-bottom: solid 2px #F2F2F2;
    padding-left: 20px;
    outline: none;
    font-weight: bold;
    font-size: 17px;
}
.localisation button{
    display: flex;
    justify-content: center;
    align-items: center;
    width: 35%;
    border: none;
    color: white;
    font-weight: bold;
    font-size: 17px;
    background-color: rgb(35, 93, 255);
    border-top-right-radius: 12px;
    border-bottom-right-radius: 12px;
}
.localisation button:hover{
    cursor: pointer;
    font-size: 18px;
    transition: 0.2s;
}
#iconeloc{
    background-color: #F2F2F2;
    border-top-left-radius: 12px;
    border-bottom-left-radius: 12px;
    font-size: 20px;
    width: 12%;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}
#iconeloc:hover{
    cursor: pointer;
    font-size: 25px;
    transition: 00.2s;
}
.filtres{
    display: flex;
    align-items: center;
    font-weight: bold;
    height: 150px;

}
.filtres ul{
    width: 48%;
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    margin-left: 40px;
    list-style-type:none;
}
.filtres ul li{
    border: solid 2px #F2F2F2;
    border-radius:25px;
    padding-right: 10px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 50px;
}
.filtres ul li .text{
    padding-left: 10px;
    padding-right: 5px;
}
.filtres ul li i{
    background-color: rgb(196, 220, 255);
    width: 50px;
    border-radius:100%;
    display: flex;
    justify-content: center;
    align-items: center;
    color: blue;
    font-size: 20px;
    height:50px;
}
.filtres ul li:hover{
    cursor: pointer;
    transform: scale(1.05);
    background-color: rgb(241, 241, 241);
    transition: 0.2s;
}
.entete .info{
    display: inline-flex;
    align-items: center;
}
.entete .info i{
    padding: 10px 10px;
    width: 5px;
    height: 5px;
    border: solid 1px black;
    border-radius: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    color: blue;
    font-size: 20px;
}
.entete .info p{
    margin-left: 15px;
}
.content{
    display: flex;
    justify-content: space-around;
    margin-top: 20px;
    margin-bottom: 20px;
}
.content .hebergements h3{
    width: 100%;
    margin: 20px 40px;
}
.content .populaires h3{
    align-items: left;
    width: 90%;
    margin: 20px 10px;
}
.content .hebergements{
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    align-items: center;
    background-color: #F2F2F2;
    border-radius: 20px;
    height: 800px;
    flex: 2;
}
.box-content{
    text-decoration: none;
    color: black;
}
.hebergements .box-content{
    background-color: white;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: left;
    box-shadow: 0 0 15px rgb(168, 167, 167);
    border-radius: 30px;
    width: 300px;
    height: 250px;
    margin: 10px;
    padding: 10px 10px;   
}
.hebergements .box-content img{
    width: 100%;
    max-height: 100%;
    height: 55%;
    border-top-right-radius: 20px;
    border-top-left-radius: 20px;
    object-fit: cover;
}
.hebergements .box-content h4{
    margin: 7px;
}
.hebergements .box-content p{
    font-weight: bold;
    padding-top: 0px;
    margin: 7px;
}
.hebergements .box-content .stars{
    margin: 7px;
}
.hebergements button{
    align-items: center;
    justify-content: center;
    margin: auto;
}
.content .populaires{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-evenly;
    background-color: #F2F2F2;
    border-radius: 20px;
    margin-left: 30px;
    height: 800px;
    flex: 1;
}
.populaires .title{
    display: flex;
    justify-content: space-between;
}
.populaires .box-content{
    background-color: white;
    box-shadow: 0 0 15px rgb(168, 167, 167);
    border-radius: 30px;
    width: 400px;
    height: 180px;
    margin: 10px;
    display: flex;
    flex-direction: row;
    padding: 7px 7px;
}

.populaires .box-content .details{
    display: flex;
    flex-direction: column;
    margin-left: 10px;
    justify-content: space-around;
}
.populaires .box-content img{
    max-width: 100%;
    width: 45%;
    border-bottom-left-radius: 20px;
    border-top-left-radius: 20px;
    object-fit: cover;
}
.populaires .box-content h4, .populaires .box-content .stars{
    margin: 7px;
}
.populaires .box-content p{
    font-weight: bold;
    margin: 7px;
}
.activites{
    border-radius: 20px;
    height: 550px;
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin: auto;
}
.activites figure{
    margin: 0;
}
.activites figcaption{
    margin: auto;
    font-size: 20px;
    font-weight: bold;
}
.activitesbox{
    box-shadow: 0 0 15px rgb(168, 167, 167);
}
.activitesbox:hover{
    transform: scale(1.01);
    box-shadow: 0px 0px 17px grey;
    transition: 0.2s;
}
#activitesbox1{
    display: flex;
    flex-direction: column;
    background-color: white;
    align-items: center;
    width: 80%;
    height: 100%;
    border-radius: 20px 20px 20px 20px;
}
#activitesbox1 img{
    position: relative;
    width: 100%;
    height: 90%;
    border-radius: 20px 20px 0 0;
    object-fit: cover;
}
#activitesbox2{
    display: flex;
    flex-direction: column;
    background-color: white;
    justify-content: center;
    align-items: center;
    width: 80%;
    height: 50%;
    border-radius: 20px 20px 20px 20px;
}
#activitesbox2 img{
    position: relative;
    width: 100%;
    height: 80%;
    border-radius: 20px 20px 0 0;
    object-fit: cover;
}
#activitesbox3{
    display: flex;
    flex-direction: column;
    background-color: white;
    justify-content: center;
    align-items: center;
    width: 80%;
    height: 40%;
    border-radius: 20px 20px 20px 20px;
}
#activitesbox3 img{
    position: relative;
    width: 100%;
    height: 80%;
    border-radius: 20px 20px 0 0;
    object-fit: cover;
}
#activitesbox4{
    display: flex;
    flex-direction: column;
    background-color: white;
    align-items: center;
    width: 80%;
    height: 100%;
    border-radius: 20px 20px 20px 20px;
}
#activitesbox4 img{
    position: relative;
    width: 100%;
    height: 90%;
    border-radius: 20px 20px 0 0;
    object-fit: cover;
}
#activitesbox5{
    display: flex;
    flex-direction: column;
    background-color: white;
    justify-content: center;
    align-items: center;
    width: 80%;
    height: 40%;
    border-radius: 20px 20px 20px 20px;
}
#activitesbox5 img{
    position: relative;
    width: 100%;
    height: 80%;
    border-radius: 20px 20px 0 0;
    object-fit: cover;
}
#activitesbox6{
    display: flex;
    flex-direction: column;
    background-color: white;
    justify-content: center;
    align-items: center;
    width: 80%;
    height: 50%;
    border-radius: 20px 20px 20px 20px;
}
#activitesbox6 img{
    position: relative;
    width: 100%;
    height: 80%;
    border-radius: 20px 20px 0 0;
    object-fit: cover;
}
#activitescolumn1{
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    width: 50%;
    height: 100%;
}
#activitescolumn2{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    width: 50%;
    height: 100%;
}
#activitescolumn3{
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    width: 50%;
    height: 100%;
}
#activitescolumn4{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    width: 50%;
    height: 100%;
}
section h2{
    margin-left: 40px;
}
.content button{
    display: flex;
    justify-content: flex-start;
    align-items: center;
    width: 150px;
    border: none;
    background: none;
    font-size: 20px;
    margin-left: 40px;
    margin-bottom: 40px;
}
.content button:hover{
    cursor: pointer;
    transform: scale(1.1);
    transition: 0.2s;
}
.content .box-content:hover{
    transform: scale(1.02);
    cursor: pointer;
    box-shadow: 0px 0px 17px grey;
    transition: 0.2s;
}
footer{
    margin-top: 40px;
    padding: 10px 10px;
    background-color: #F2F2F2;
    width: 100%;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
}
footer h5{
    margin: 15px 0px;
}
footer a{
    color: black;
    margin: 7px 0px;
    text-decoration-line: none;
}
footer a:hover{
    text-decoration-line: underline;
}
#info{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    margin-bottom: 20px;
}
#hebergements, #assist{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    margin-bottom: 30px;
}
section h3{
    margin: 30px 40px;
}

